# hackin-winters

./: .gitignore  README.md  pyproject.toml
src/: constants.py  main.py
src/app/: app.py
src/app/routes/: reminder.py  search.py
src/models/: __init__.py
src/static/styles/: contactus.css  dreminder.css  error.css  index.css  myreminders.css  reminder.css  search.css
src/styles/: index.css  reminder.css
src/templates/: about.html  contactus.html  dreminder.html  error.html  index.html  myreminders.html  reminder.html  search.html
